--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-<title>电子包浆生成器 - 神奇海螺实验室</title>
-<meta name="discription" content="电子包浆生成器 - 图片虚拟做旧工具、图片绿化器、包浆生成、赛博做旧 - 神奇海螺实验室">
+<title>电子包浆 图片绿化器 - 神奇海螺实验室</title>
+<meta name="discription" content="电子包浆 图片绿化器 - 电子包浆生成器、图片虚拟做旧工具、图片绿化器、包浆生成、赛博做旧 - 神奇海螺实验室">
 <link rel="stylesheet" href="document.css">
 <meta name="viewport" content="width=device-width,user-scalable=0">
 <!-- <link rel="manifest" href="manifest.json" crossorigin="use-credentials"> -->
 <div class="app">
-    <h1>电子包浆</h1>
+    <h1>电子包浆 图片绿化器</h1>
     <div class="output-box">
         <img class="source-image" :src="src" ref="img" @load="patina()" :style="`width:${width}px;`">
         <img class="output-image" :src="output" v-if="output" :style="`width:${width}px;`">
