添加保存按钮

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 
     <div class="ctrl-box">
         <div class="input-box">
-            <button @click="chooseFileAndSetImageSrc()">选择或粘贴拖拽图片</button>
+            <button @click="chooseFileAndSetImageSrc">选择或粘贴拖拽图片</button>
+            <button @click="save">保存图片</button>
         </div>
         <div class="input-box" style="padding:10px 0;">
             <label>
@@ -140,7 +141,7 @@
 
     </div>
     <blockquote>
-        <p>表情包因反复被下载保存使用,画质逐渐变差、模糊、变绿，出现马赛克和层层叠叠的水印。</p>
+        <p>给表情赋予时间沉淀</p>
     </blockquote>
     <footer>
         <div class="copyright">
