--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <meta charset="UTF-8">
-<title>电子包浆 图片绿化工具 - 神奇海螺实验室</title>
+<title>电子包浆 图片做旧工具 赛博包浆虚拟器 - 神奇海螺实验室</title>
 <meta name="discription" content="电子包浆 图片绿化器 - 电子包浆生成器、图片虚拟做旧工具、图片绿化器、包浆生成、赛博做旧 - 神奇海螺实验室">
 <link rel="stylesheet" href="document.css">
 <meta name="viewport" content="width=device-width,user-scalable=0">
 <!-- <link rel="manifest" href="manifest.json" crossorigin="use-credentials"> -->
 <div class="app">
-    <h1>电子包浆 图片绿化工具</h1>
+    <h1>电子包浆 图片做旧工具 赛博包浆虚拟器</h1>
     <div class="output-box">
         <img class="source-image" :src="src" ref="img" @load="patina()" :style="`width:${width}px;`">
         <img class="output-image" :src="output" v-if="output" :style="`width:${width}px;`">
@@ -40,12 +40,12 @@
         </div>
         
         <div class="input-box" v-else>
-            <h4>做旧次数</h4>
+            <h4>做旧年份</h4>
             <input type="range" min=1 max=100 step="1" v-model.number="config.round"> {{config.round}}
         </div>
 
         <div class="input-box">
-            <h4>质量</h4>
+            <h4>画质</h4>
             <input type="range" min=0 max=100 step="1" v-model.number="config.quality"> {{config.quality}}%
         </div>
 
@@ -57,7 +57,7 @@
             </label>
         </div>
         <div class="debug-box" v-if="debug">
-            <button @click="patina()" :disabled="runing">更新</button>
+            <!-- <button @click="patina()" :disabled="runing">更新</button> -->
             <button @click="reset">恢复默认选项</button>
             <!-- <button @click="createCanvas()">createCanvas</button> -->
 
