--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
     </blockquote>
     <footer>
         <div class="copyright">
+            <br>
             <a href="https://weibo.com/1197780522/Lmoup2eDs" target="_blank">转发到微博</a>
             <br>
             全做：<a href="https://weibo.com/reiove" target="_blank">@卜卜口</a>
@@ -190,19 +191,28 @@
     </footer>
 
     <div class="tip-box">
+        <h4>相关项目</h4>
+        <ul>
+            <li>
+                <h6>「 蒸 気 機 」虚拟信号蒸汽波风格化影像后期工具</h6>
+                <a href="https://lab.magiconch.com/vaporwave/?from=patina" target="_blank">lab.magiconch.com/vaporwave</a>
+            </li>
+        </ul>
+    </div>
+    <div class="tip-box">
         <h4>参考</h4>
         <ul>
             <li>
-                梗图生成器 - 所见即所得的梗图生成器、支持电子包浆等功能
-                <small><a href="http://x.magiconch.com/" target="_blank">http://x.magiconch.com/</a></small>
+                <h6>梗图生成器 - 所见即所得的梗图生成器、支持电子包浆等功能</h6>
+                <a href="http://x.magiconch.com/" target="_blank">x.magiconch.com</a>
             </li>
             <li>
-                JPEGreen Simulator
-                <small><a href="https://m13253.github.io/JPEGreen/" target="_blank">https://m13253.github.io/JPEGreen/</a></small>
+                <h6>JPEGreen Simulator</h6>
+                <a href="https://m13253.github.io/JPEGreen/" target="_blank">m13253.github.io/JPEGreen</a>
             </li>
             <li>
-                Use libjpeg-turbo for YUV->RGB conversion in jpeg encoder
-                <small><a href="https://github.com/google/skia/commit/c7d01d3e1d3621907c27b283fb7f8b6e177c629d" target="_blank">https://github.com/google/skia/commit/c7d01d3e1d3621907c27b283fb7f8b6e177c629d</a></small>
+                <h6>Use libjpeg-turbo for YUV->RGB conversion in jpeg encoder</h6>
+                <a href="https://github.com/google/skia/commit/c7d01d3e1d3621907c27b283fb7f8b6e177c629d" target="_blank">github.com/google/skia/commit/c7d01d3e1d3621907c27b283fb7f8b6e177c629d</a>
             </li>
         </ul>
     </div>
