--- a/index.html
+++ b/index.html
@@ -134,6 +134,10 @@
                 <input type="range" min=.5 max=1.5 step="0.1" v-model.number="config.watermarkSize"> *{{config.watermarkSize}}
             </div>
             <div class="input-box">
+                <h4>水印阴影透明度</h4>
+                <input type="range" min=.1 max=1 step="0.1" v-model.number="config.watermarkShadowAlpha"> {{config.watermarkShadowAlpha}}
+            </div>
+            <div class="input-box">
                 <h4>水印位置</h4>
                 <label>
                     <input type="radio" v-model="config.watermarkPlan" :value="2">
