bugfix 运行时屏蔽给忘了

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <link rel="stylesheet" href="document.css">
 <meta name="viewport" content="width=device-width,user-scalable=0">
 <!-- <link rel="manifest" href="manifest.json" crossorigin="use-credentials"> -->
-<div class="app">
+<div class="app" :data-runing="runing">
     <header>
         <h1>电子包浆 图片赛博做旧</h1>
         <p>给表情赋予年份</p>
