--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8">
 <title>电子包浆 图片做旧工具 赛博包浆虚拟器 - 神奇海螺实验室</title>
 <meta name="discription" content="电子包浆 图片绿化器 - 电子包浆生成器、图片虚拟做旧工具、图片绿化器、包浆生成、赛博做旧 - 神奇海螺实验室">
-<link rel="stylesheet" href="document.css?r=220408-1">
+<link rel="stylesheet" href="document.css?r=220408-2">
 <meta name="viewport" content="width=device-width,user-scalable=0">
 <!-- <link rel="manifest" href="manifest.json" crossorigin="use-credentials"> -->
 <div class="app" :data-runing="runing">
@@ -33,7 +33,7 @@
                 <input type="checkbox" v-model="config.isPop">
                 波普
             </label>
-            <span v-if="current">{{current}}/{{config.isPop?config.pop*config.pop:config.round}}</span>
+            <span v-if="current" style="display:inline-block;width:5em;text-align:right">{{current}}/{{config.isPop?config.pop*config.pop:config.round}}</span>
             <!-- <input type="range" min=1 max=100 step="1" v-model.number="config.green"> {{config.green}} -->
         </div>
 
@@ -248,5 +248,5 @@
 </div>
 
 <script src="https://cdn.bootcss.com/vue/2.6.11/vue.min.js"></script>
-<script src="patina.js?r=220408-1"></script>
-<script src="document.js?r=220408-1"></script>
+<script src="patina.js?r=220408-2"></script>
+<script src="document.js?r=220408-2"></script>
