--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta name="discription" content="电子包浆 图片绿化器 - 电子包浆生成器、图片虚拟做旧工具、图片绿化器、包浆生成、赛博做旧 - 神奇海螺实验室">
 <link rel="stylesheet" href="document.css?r=220408-2">
 <meta name="viewport" content="width=device-width,user-scalable=0">
-<!-- <link rel="manifest" href="manifest.json" crossorigin="use-credentials"> -->
 <div class="app" :data-runing="runing">
     <header>
         <h1>电子包浆 图片赛博做旧</h1>
@@ -247,6 +246,6 @@
     </div>
 </div>
 
-<script src="https://cdn.bootcss.com/vue/2.6.11/vue.min.js"></script>
+<script src="/vue.2.6.11.min.js"></script>
 <script src="patina.js?r=220408-2"></script>
 <script src="document.js?r=220408-2"></script>
