--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
                 <h4>模糊 <small>高效率</small></h4>
                 <input type="range" min=1 max=20 step="0.1" v-model.number="config.mix"> {{config.mix}}
             </div>
-            <!-- <div class="input-box">
+            <div class="input-box">
                 <h4>略缩图最大长边</h4>
                 <input type="range" min=200 max=1200 step="100" v-model.number="config.maxWidth"> {{config.maxWidth}}px
-            </div> -->
+            </div>
             <div class="input-box">
                 <h4>噪点</h4>
                 <input type="range" min=1 max=125 step="1" v-model.number="config.lightNoise"> {{config.lightNoise}}
