--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <meta charset="UTF-8">
 <title>电子包浆 图片做旧工具 赛博包浆虚拟器 - 神奇海螺实验室</title>
 <meta name="discription" content="电子包浆 图片绿化器 - 电子包浆生成器、图片虚拟做旧工具、图片绿化器、包浆生成、赛博做旧 - 神奇海螺实验室">
-<link rel="stylesheet" href="document.css?r=220408-2">
+<link rel="stylesheet" href="document.css?r=220504">
 <meta name="viewport" content="width=device-width,user-scalable=0">
 <div class="app" :data-runing="runing">
     <header>
         <h1>电子包浆 图片赛博做旧</h1>
         <p>给表情赋予年份</p>
     </header>
-    <div class="output-box">
-        <img class="source-image" :src="src" ref="img" @load="patina()" :style="`width:${width}px;`">
-        <img class="output-image" :src="output" v-if="output" :style="`width:${width}px;`">
+    <div class="output-box" :data-direction="direction">
+        <img class="source-image" :src="src" ref="img" @load="load()" :data-width="`${width}px`">
+        <img class="output-image" :src="output" v-if="output" :data-width="`${width}px`">
     </div>
 
     <div class="ctrl-box" v-if="config" v-cloak>
@@ -76,10 +76,16 @@
             <div class="input-box" style="padding:5px 0;">
                 <label>
                     <input type="checkbox" v-model="config.preview">
-                    缩略图
-                    <small>对性能影响极大，谨慎使用</small>
+                    缩略图模式
+                    <small>关闭对性能影响极大，谨慎使用</small>
                 </label>
             </div>
+            <fieldset class="input-box" :disabled="!config.preview" v-if="config.preview">
+                <h4>略缩图最大长边</h4>
+                <input type="range" min=200 max=1200 step="100" v-model.number="config.maxWidth">
+                <span>{{config.maxWidth}}px</span>
+            </fieldset>
+
             <div class="input-box" style="padding:5px 0;">
                 <label>
                     <input type="checkbox" v-model="superMode">
@@ -89,15 +95,13 @@
             </div>
             <div class="input-box">
                 <h4>模糊 <small>高效率</small></h4>
-                <input type="range" min=1 max=20 step="0.1" v-model.number="config.mix"> {{config.mix}}
-            </div>
-            <div class="input-box">
-                <h4>略缩图最大长边</h4>
-                <input type="range" min=200 max=1200 step="100" v-model.number="config.maxWidth"> {{config.maxWidth}}px
+                <input type="range" min=1 max=20 step="0.1" v-model.number="config.mix"> 
+                <span>{{config.mix}}</span>
             </div>
             <div class="input-box">
                 <h4>噪点</h4>
-                <input type="range" min=1 max=125 step="1" v-model.number="config.lightNoise"> {{config.lightNoise}}
+                <input type="range" min=1 max=125 step="1" v-model.number="config.lightNoise"> 
+                <span>{{config.lightNoise}}</span>
             </div>
             <hr>
 
@@ -112,32 +116,40 @@
                 <input type="range" min=0 max=2 step="0.1" v-model.number="config.contrast"> {{config.contrast}}
             </div> -->
             <div class="input-box">
-                <h4>水印尺寸</h4>
-                <input type="range" min=.5 max=1.5 step="0.1" v-model.number="config.watermarkSize"> *{{config.watermarkSize}}
-            </div>
-            <div class="input-box">
-                <h4>水印阴影透明度</h4>
-                <input type="range" min=.1 max=1 step="0.1" v-model.number="config.watermarkShadowAlpha"> {{config.watermarkShadowAlpha}}
-            </div>
-            <div class="input-box">
-                <h4>水印位置</h4>
                 <label>
-                    <input type="radio" v-model="config.watermarkPlan" :value="2">
-                    右下中
-                </label>
-                <label>
-                    <input type="radio" v-model="config.watermarkPlan" :value="1">
-                    右下
-                </label>
-                <label>
-                    <input type="radio" v-model="config.watermarkPlan" :value="0">
-                    右
+                    <input type="checkbox" v-model="config.watermark">
+                    虚拟水印
                 </label>
             </div>
-            <div class="input-box">
-                <h4>水印用户名们<small>换行分割，光标移出生效；<code>0000</code>替代随机数字、<code>_</code>半角下划线替代<code>-_+~!^&、.。”“"'|</code>随机字符</small></h4>
-                <textarea v-model.lazy="userNamesText" cols="30" rows="10"></textarea>
-            </div>
+            <fieldset v-if="config.watermark">
+                <div class="input-box">
+                    <h4>水印尺寸</h4>
+                    <input type="range" min=.5 max=1.5 step="0.1" v-model.number="config.watermarkSize"> *{{config.watermarkSize}}
+                </div>
+                <div class="input-box">
+                    <h4>水印阴影透明度</h4>
+                    <input type="range" min=.1 max=1 step="0.1" v-model.number="config.watermarkShadowAlpha"> {{config.watermarkShadowAlpha}}
+                </div>
+                <div class="input-box">
+                    <h4>水印位置</h4>
+                    <label>
+                        <input type="radio" v-model="config.watermarkPlan" :value="2">
+                        右下中
+                    </label>
+                    <label>
+                        <input type="radio" v-model="config.watermarkPlan" :value="1">
+                        右下
+                    </label>
+                    <label>
+                        <input type="radio" v-model="config.watermarkPlan" :value="0">
+                        右
+                    </label>
+                </div>
+                <div class="input-box">
+                    <h4>水印用户名们<small>换行分割，光标移出生效；<code>0000</code>替代随机数字、<code>_</code>半角下划线替代<code>-_+~!^&、.。”“"'|</code>随机字符</small></h4>
+                    <textarea v-model.lazy="userNamesText" cols="30" rows="10"></textarea>
+                </div>
+            </fieldset>
             <hr>
             <div class="input-box">
                 <h4>相对原图尺寸缩放</h4>
@@ -247,5 +259,5 @@
 </div>
 
 <script src="/vue.2.6.11.min.js"></script>
-<script src="patina.js?r=220408-2"></script>
-<script src="document.js?r=220408-2"></script>
+<script src="patina.js?r=220504"></script>
+<script src="document.js?r=220504"></script>
