调整横竖模式阈值

--- a/index.html
+++ b/index.html
@@ -260,4 +260,4 @@
 
 <script src="/vue.2.6.11.min.js"></script>
 <script src="patina.js?r=220504"></script>
-<script src="document.js?r=220504"></script>
+<script src="document.js?r=220504-2"></script>
