--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="UTF-8">
 <title>电子包浆 图片做旧工具 赛博包浆虚拟器 - 神奇海螺实验室</title>
 <meta name="discription" content="电子包浆 图片绿化器 - 电子包浆生成器、图片虚拟做旧工具、图片绿化器、包浆生成、赛博做旧 - 神奇海螺实验室">
-<link rel="stylesheet" href="document.css?r=220504-6">
+<link rel="stylesheet" href="document.css">
 <meta name="viewport" content="width=device-width,user-scalable=0">
 <div class="app" :data-runing="runing">
     <header>
@@ -260,5 +260,5 @@
 </div>
 
 <script src="/vue.2.6.11.min.js"></script>
-<script src="patina.js?r=220504"></script>
-<script src="document.js?r=220504-2"></script>
+<script src="patina.js"></script>
+<script src="document.js"></script>
