--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <p>给表情赋予年份</p>
     </header>
     <div class="output-box" :data-direction="direction">
-        <img class="source-image" :src="src" ref="img" @load="load()" :data-width="`${width}px`">
+        <img class="source-image" :src="src" ref="img" @load="load()" :data-width="`${width}px`" rel:auto_play="0">
         <img class="output-image" :src="output" v-if="output" :data-width="`${width}px`">
     </div>
 
@@ -18,6 +18,7 @@
         <div class="input-box">
             <button @click="chooseFileAndSetImageSrc">选择或粘贴拖拽图片</button>
             <button @click="save">保存图片</button>
+            <button v-if="isShouldRedoGIF && isGIF" @click="_patina">重新渲染GIF</button>
         </div>
         <div class="input-box" style="padding:10px 0;">
             <label>
@@ -28,11 +29,13 @@
                 <input type="checkbox" v-model="config.watermark">
                 水印
             </label>
-            <label>
+            <label v-if="!isGIF">
                 <input type="checkbox" v-model="config.isPop">
                 波普
             </label>
             <span v-if="current" style="display:inline-block;width:5em;text-align:right">{{current}}/{{config.isPop?config.pop*config.pop:config.round}}</span>
+            <span v-if="isLoadingGIF" style="display:inline-block;width:10em;text-align:right">正在读取GIF...</span>
+            <span v-if="isPackingGIF" style="display:inline-block;width:10em;text-align:right">正在生成GIF...</span>
             <!-- <input type="range" min=1 max=100 step="1" v-model.number="config.green"> {{config.green}} -->
         </div>
 
@@ -260,5 +263,9 @@
 </div>
 
 <script src="/vue.2.6.11.min.js"></script>
+<script src="/patina-gif/lib/libgif.js"></script>
+<script src="/patina-gif/lib/rubbable.js"></script>
+<script src="/patina-gif/lib/gif.js"></script>
 <script src="patina.js"></script>
+<script src="/patina-gif/patina-gif.js"></script>
 <script src="document.js"></script>
