引用路径统一

--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
 </div>
 
 <script src="/vue.2.6.11.min.js"></script>
-<script src="/patina-gif/lib/libgif.js"></script>
-<script src="/patina-gif/lib/rubbable.js"></script>
-<script src="/patina-gif/lib/gif.js"></script>
+<script src="patina-gif/lib/libgif.js"></script>
+<script src="patina-gif/lib/rubbable.js"></script>
+<script src="patina-gif/lib/gif.js"></script>
 <script src="patina.js"></script>
-<script src="/patina-gif/patina-gif.js"></script>
+<script src="patina-gif/patina-gif.js"></script>
 <script src="document.js"></script>
